externalised command label

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -71,6 +71,7 @@ command.window.switchtheme.mnemonic=T
 command.window.switchtheme.description=Zwischen hellem und dunklen Design umschalten
 command.validate.name=Validieren
 command.validate.label=Validieren
+command.problemview.showinhidden=Anzeigen in versteckt
 
 wizard.category.modulestudio=ModuleStudio
 wizard.newproject.name=ModuleStudio-Projekt
