added some missing validation constraints

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -108,14 +108,17 @@ MostDslValidator.EntityFieldDateTimeNeedsValidDefaultValue=Der Standardwert für 
 MostDslValidator.EntityFieldDateTimeOnlyOneEndDate=Pro Entität darf nur ein Feld ein Enddatum repräsentieren.
 MostDslValidator.EntityFieldDateTimeOnlyOneStartDate=Pro Entität darf nur ein Feld ein Startdatum repräsentieren.
 MostDslValidator.EntityFieldDecimalMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
+MostDslValidator.EntityFieldDecimalMustNotActAsPercentualAndCurrency=Ein Integer-Feld darf nicht gleichzeitig als prozentual und Währung agieren.
 MostDslValidator.EntityFieldDecimalNeedsValidDefaultValue=Der Standardwert für ein Decimal-Feld muss eine Fließkommazahl sein.
 MostDslValidator.EntityFieldDecimalScaleMustNotGreaterLength=Die Länge (Präzision) eines Decimal-Feldes muss größer sein als die Skalierung.
 MostDslValidator.EntityFieldDefaultValueTooLong=Der Standardwert ist zu lang für die angegebene Feldlänge.
 MostDslValidator.EntityFieldEmailNeedsValidDefaultValue=Der Standardwert für ein E-Mail-Feld muss eine gültige E-Mail-Adresse sein.
 MostDslValidator.EntityFieldFloatMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
+MostDslValidator.EntityFieldFloatMustNotActAsPercentualAndCurrency=Ein Float-Feld darf nicht gleichzeitig als prozentual und Währung agieren.
 MostDslValidator.EntityFieldFloatNeedsValidDefaultValue=Der Standardwert für ein Float-Feld muss eine Fließkommazahl sein.
 MostDslValidator.EntityFieldIntegerLengthMustNotBeTooLarge=Die maximale Länge für ein Integer-Feld ist 18.
 MostDslValidator.EntityFieldIntegerMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
+MostDslValidator.EntityFieldIntegerMustNotActAsPercentualAndRange=Ein Integer-Feld darf nicht gleichzeitig als prozentual und Bereich agieren.
 MostDslValidator.EntityFieldIntegerNeedsValidDefaultValue=Der Standardwert für ein Integer-Feld darf nur Ziffern enthalten.
 MostDslValidator.EntityFieldItemMustBeValidIdentifierIncludingWhitespace=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sind erlaubt): {0}.
 MostDslValidator.EntityFieldListCheckboxesNeedsMultiple=Nur Listen mit Mehrfachselektionen können aus Checkboxen bestehen.
@@ -143,16 +146,18 @@ MostDslValidator.EntityFieldsMustBeUnique=Die Namen der Felder müssen eindeutig 
 MostDslValidator.EntityFieldStringLengthMustNotBeGreaterMinLength=Die Größe des Strings muss größer sein als die minimale Länge.
 MostDslValidator.EntityFieldStringLengthMustNotBeTooLarge=Die Größe des Strings darf nicht größer sein als 255; für größere Daten verwende Text-Felder.
 MostDslValidator.EntityFieldStringLengthMustNotBeZero=Die Größe des Strings darf nicht kleiner als 1 sein.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForCountry=Die String-Länge für Ländercodes muss mindestens zwei Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForCreditCard=Die String-Länge für Kreditkartennummern muss mindestens 20 Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForCurrency=Die String-Länge für Währungscodes muss mindestens drei Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForHtmlColour=Die String-Länge für HTML-Farbcodes muss mindestens sieben Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForIpAddress4=Die String-Länge für IPv4-Adressen muss mindestens 15 Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForIpAddress6=Die String-Länge für IPv6-Adressen muss mindestens 39 Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForLanguage=Die String-Länge für Sprachen muss mindestens sieben Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
-MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort und UUID.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCountry=Die String-Länge für Ländercodes muss mindestens zwei Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCreditCard=Die String-Länge für Kreditkartennummern muss mindestens 20 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForCurrency=Die String-Länge für Währungscodes muss mindestens drei Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForHtmlColour=Die String-Länge für HTML-Farbcodes muss mindestens sieben Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForIban=Die String-Länge für IBAN-Nummern muss mindestens 34 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForIpAddress4=Die String-Länge für IPv4-Adressen muss mindestens 15 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForIpAddress6=Die String-Länge für IPv6-Adressen muss mindestens 39 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLanguage=Die String-Länge für Sprachen muss mindestens sieben Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForTimezone=Die String-Länge für Zeitzonen muss mindestens 30 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
+MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort, Zeitzone und UUID.
 MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Währungen, Sprachen, Sprachumgebungen, IP-Adressen, Farben und UUIDs müssen auch den nospace-Validator aktivieren.
 MostDslValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
