--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -177,6 +177,8 @@ MostDslQuickfixProvider.IncreaseFieldLengthTo15=Feldlänge auf 15 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo2=Feldlänge auf 2 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo20=Feldlänge auf 20 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo3=Feldlänge auf 3 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo30=Feldlänge auf 30 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo34=Feldlänge auf 34 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo36=Feldlänge auf 36 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo39=Feldlänge auf 39 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
@@ -226,6 +228,7 @@ MostDslQuickfixProvider.RemoveTheDbName=Den DB Namen entfernen
 MostDslQuickfixProvider.RemoveEnhancedWorkflow=Den erweiterten Workflow entfernen
 MostDslQuickfixProvider.RemoveDeleteActionFromTheController=Die Delete-Aktion vom Controller '{0}' entfernen
 MostDslQuickfixProvider.RemoveGeographicalFlag=Das geographical-Flag entfernen
+MostDslQuickfixProvider.RemoveIbanFlag=iban-Flag entfernen
 MostDslQuickfixProvider.RemoveIpAddressSetting=IP-Adresse entfernen
 MostDslQuickfixProvider.RemoveLanguageFlag=Das language-Flag entfernen
 MostDslQuickfixProvider.RemoveLocaleFlag=Das locale-Flag entfernen
@@ -233,19 +236,24 @@ MostDslQuickfixProvider.RemoveLoggableFlag=Das loggable-Flag entfernen
 MostDslQuickfixProvider.RemoveMandatoryFlag=Das mandatory-Flag entfernen
 MostDslQuickfixProvider.RemoveNullableFlag=Das nullable-Flag entfernen
 MostDslQuickfixProvider.RemoveOwnerPermissionFlag=Das ownerPermission-Flag entfernen
+MostDslQuickfixProvider.RemovePercentualFlag=Das percentual-Flag entfernen
 MostDslQuickfixProvider.RemovePrimaryKeyFlag=Das PK-Flag entfernen
+MostDslQuickfixProvider.RemoveRangeFlag=Das range-Flag entfernen
 MostDslQuickfixProvider.RemoveSuperclassFlag=superclass-Flag entfernen
 MostDslQuickfixProvider.RemoveTheElement=Das Element entfernen
 MostDslQuickfixProvider.RemoveTheField=Das Feld entfernen
 MostDslQuickfixProvider.RemoveTheHtmlColourFlag=Das html colour-Flag entfernen
+MostDslQuickfixProvider.RemoveTheIbanFlag=Das iban-Flag entfernen
 MostDslQuickfixProvider.RemoveTheInheritanceRelationship=Die Vererbungsbeziehung entfernen
 MostDslQuickfixProvider.RemoveTheInvalidIndexItem=Den ungültigen Index-Eintrag entfernen
 MostDslQuickfixProvider.RemoveTheIpAddressSetting=Die IP-Adressen-Einstellung entfernen
 MostDslQuickfixProvider.RemoveTheOutgoingOneToManyRelationship=Die ausgehende Eins-zu-Viele-Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelation=Die Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelationship=Die Beziehung entfernen
+MostDslQuickfixProvider.RemoveTheTimezoneFlag=Das timezone-Flag entfernen
 MostDslQuickfixProvider.RemoveTheUnrequiredSlugField=Das unbenötigte slug-Feld entfernen
 MostDslQuickfixProvider.RemoveTheUuidFlag=Das UUID-Flag entfernen
+MostDslQuickfixProvider.RemoveTimezoneFlag=timezone-Flag entfernen
 MostDslQuickfixProvider.RemoveUniqueFlag=Das unique-Flag entfernen
 MostDslQuickfixProvider.RemoveUuidFlag=Das UUID-Flag entfernen
 MostDslQuickfixProvider.RemoveVersionFlag=Das version-Flag entfernen
@@ -308,6 +316,7 @@ MostDslQuickfixProvider.UnsetsAllFlagsExceptIpAddress=Alle Flags außer ip addres
 MostDslQuickfixProvider.UnsetsAllFlagsExceptLanguage=Alle Flags außer language zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptLocale=Alle Flags außer locale zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptPassword=Alle Flags außer password zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptTimezone=Alle Flags außer timezone zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptUuid=Alle Flags außer uuid zurücksetzen
 MostDslQuickfixProvider.UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetTheAggregateFlag=Das aggregate-Flag zurücksetzen
@@ -341,6 +350,7 @@ MostDslQuickfixProvider.UseAsPast=Als Vergangenheit verwenden
 MostDslQuickfixProvider.UseAsSortableField=Als Sortierfeld verwenden
 MostDslQuickfixProvider.UseAsSortableGroup=Als Sortiergruppierung verwenden
 MostDslQuickfixProvider.UseAsStartDate=Als Startdatum verwenden
+MostDslQuickfixProvider.UseAsTimezone=Als Zeitzone verwenden
 MostDslQuickfixProvider.UseAsUuid=Als UUID verwenden
 MostDslQuickfixProvider.UseFirst=Den ersten verwenden
 MostDslQuickfixProvider.UseFirstOne=Den ersten verwenden
