--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -236,7 +236,7 @@ MostDslQuickfixProvider.RemoveLoggableFlag=Das loggable-Flag entfernen
 MostDslQuickfixProvider.RemoveMandatoryFlag=Das mandatory-Flag entfernen
 MostDslQuickfixProvider.RemoveNullableFlag=Das nullable-Flag entfernen
 MostDslQuickfixProvider.RemoveOwnerPermissionFlag=Das ownerPermission-Flag entfernen
-MostDslQuickfixProvider.RemovePercentualFlag=Das percentual-Flag entfernen
+MostDslQuickfixProvider.RemovePercentageFlag=Das percentage-Flag entfernen
 MostDslQuickfixProvider.RemovePrimaryKeyFlag=Das PK-Flag entfernen
 MostDslQuickfixProvider.RemoveRangeFlag=Das range-Flag entfernen
 MostDslQuickfixProvider.RemoveSuperclassFlag=superclass-Flag entfernen
