introduced expanded flags for relation source and target sides

--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -389,8 +389,8 @@ _UI_ListField_max_feature = Max
 _UI_ListField_max_description = Maximale Anzahl von Werten, deren Auswahl erzwungen wird (nur für Listen mit Mehrfachauswahl).
 _UI_ListField_multiple_feature = Mehrfach
 _UI_ListField_multiple_description = Ob mehrere Einträge ausgewählt werden können oder nicht.
-_UI_ListField_useChecks_feature = Checkboxen verwenden
-_UI_ListField_useChecks_description = Aktivieren um Radio-Buttons (für einwertige Listen) oder Checkboxen (für mehrwertige Listen) an Stelle eines Select-Feldes zu erstellen.
+_UI_ListField_expanded_feature = Expandiert
+_UI_ListField_expanded_description = Aktivieren um Radio-Buttons (für einwertige Listen) oder Checkboxen (für mehrwertige Listen) an Stelle eines Select-Feldes zu erstellen.
 _UI_ListField_items_feature = Einträge
 _UI_ListField_items_description = Liste von Dropdown-Optionen.
 _UI_ListFieldItem_value_feature = Wert
@@ -455,6 +455,10 @@ _UI_JoinRelationship_targetField_feature = Ziel Feld
 _UI_JoinRelationship_targetField_description = Name des existierenden Feldes zum Verlinken der Ziel-Entität ("id" zum Verlinken des Primärschlüssels).
 _UI_JoinRelationship_nullable_feature = Null
 _UI_JoinRelationship_nullable_description = Ob Null-Werte erlaubt sein sollen oder nicht.
+_UI_JoinRelationship_expandedSource_feature = Expandiert Quelle
+_UI_JoinRelationship_expandedSource_description = Aktivieren um Radio-Buttons (für einwertige Relationen) oder Checkboxen (für mehrwertige Relationen) an Stelle eines Select-Feldes zu erstellen.
+_UI_JoinRelationship_expandedTarget_feature = Expandiert Ziel
+_UI_JoinRelationship_expandedTarget_description = Aktivieren um Radio-Buttons (für einwertige Relationen) oder Checkboxen (für mehrwertige Relationen) an Stelle eines Select-Feldes zu erstellen.
 _UI_JoinRelationship_unique_feature = Eindeutig
 _UI_JoinRelationship_unique_description = Ob diese Relation eindeutig ist oder nicht.
 _UI_JoinRelationship_useAutoCompletion_feature = Auto Completion verwenden
