--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -295,6 +295,7 @@ MostDslQuickfixProvider.SetsTheIdentifierStrategyToNone=Die Identifier-Strategie
 MostDslQuickfixProvider.SetTheDefaultValueToAFixedExample=Den Standardwert auf ein fixes Beispiel setzen
 MostDslQuickfixProvider.SetTheDefaultValueToNow=Den Standardwert auf now setzen
 MostDslQuickfixProvider.SetTheMaximumAllowedSizeToZeroDisablingTheWholeCheck=Die maximal erlaubte Größe auf null setzen, was den ganzen Check abschaltet
+MostDslQuickfixProvider.SetToDefaultVersion=Auf Standardversion setzen
 MostDslQuickfixProvider.SetToExample=Auf Beispiel setzen
 MostDslQuickfixProvider.SetToNow=Auf now setzen
 MostDslQuickfixProvider.SetToZero=Auf null setzen
