unified commands for importing models and migrating old models

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/views/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/views/messages_de.properties
@@ -7,8 +7,8 @@ DashboardView_OpenProject=Projekt öffnen
 DashboardView_OpenExistingProject=Ein bestehendes Modellprojekt öffnen
 DashboardView_ImportModel=Modell importieren
 DashboardView_ImportModelFile=Eine bestehende Modelldatei importieren
-DashboardView_MigrateOldModel=Altes Modell migrieren
-DashboardView_MigrateAnOldModel=Ein altes Modell aus Version 0.6.2 migrieren
+DashboardView_ImportXmlDefinition=XML-Definition importieren
+DashboardView_ImportXmlDefinitionOfOldModule=Eine XML-Definition eines alten Moduls importieren
 DashboardView_DiagramEditor=Diagramm-Editor
 DashboardView_DisplayDiagramEditor=Den Diagramm-Editor anzeigen
 DashboardView_VariablesTable=Variablen-Tabelle
