--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages.properties
@@ -50,4 +50,5 @@ ImportXmlHandler_AnErrorOccurredDuringImport=Während des Imports ist ein Fehler 
 ImportXmlHandler_PleaseSelectXmlFile=Bitte wähle eine XML-Datei.
 ImportXmlHandler_ImportDone=Import erledigt
 ImportXmlHandler_FileProcessedSuccessfully=Deine XML-Datei wurde erfolgreich verarbeitet.
-ImportXmlHandler_DomainModelCreated=Eine .mostapp-Datei mit Deinem Anwendungsmodell wurde in einem Ordner namens MOST_output erstellt.
+ImportXmlHandler_DomainModelCreated=Eine .mostapp-Datei mit Deinem Anwendungsmodell wurde in einem Ordner namens "MOST_output" erstellt.
+ImportXmlHandler_NowImportTheModel=Nun importiere dieses Modell bitte mit der Aktion "Datei > Modell öffnen > Eine bestehende Modelldatei importieren".
