externalised column headings

--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/sirius/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/sirius/messages_de.properties
@@ -2,3 +2,7 @@ SiriusListItemEditingAction_actionFailedMessage=Fehler in externer Java-Aktion
 SiriusListItemEditingAction_dialogTitle=Listeneinträge bearbeiten
 SiriusListItemEditingDialog_createItemLabel=<b>Neuen Eintrag erstellen</b>
 SiriusListItemEditingDialog_containerItemsLabel=<b>Enthaltene Einträge</b>
+SiriusListItemEditingDialog_columnDefault=Standard
+SiriusListItemEditingDialog_columnName=Name
+SiriusListItemEditingDialog_columnValue=Wert
+SiriusListItemEditingDialog_columnImage=Bild
