--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
@@ -44,6 +44,10 @@ GenerateHandler_GeneralExceptionMessage=Während des Workflows ist eine allgemein
 GenerateHandler_ErrorDuringObservingProgress=Fehler beim Beobachten des Generierungsfortschritts
 GenerateHandler_GenerationDone=Generierung abgeschlossen
 GenerateHandler_ArtifactsGenerated=Deine Artefakte wurden erfolgreich generiert.
+ImportModelHandler_SelectInputFile=Eingabedatei wählen
+ImportModelHandler_ErrorDuringImport=Fehler beim Import
+ImportModelHandler_AnErrorOccurredDuringImport=Während des Imports ist ein Fehler aufgetreten.
+ImportModelHandler_PleaseSelectMostappFile=Bitte wähle eine mostapp-Datei.
 ImportXmlHandler_SelectInputFile=Eingabedatei wählen
 ImportXmlHandler_ErrorDuringImport=Fehler beim Import
 ImportXmlHandler_AnErrorOccurredDuringImport=Während des Imports ist ein Fehler aufgetreten.
