customised dialog for opening cheat sheets

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -66,8 +66,9 @@ command.window.openproblemview.description=Die Problem View anzeigen
 command.window.switchtheme.name=Theme wechseln
 command.window.switchtheme.mnemonic=T
 command.window.switchtheme.description=Zwischen hellem und dunklen Design umschalten
-command.validate.name=Validieren
-command.validate.label=Validieren
+command.help.cheatsheets.name=Spickzettel
+command.help.cheatsheets.mnemonic=S
+command.help.cheatsheets.description=Interaktive Tutorials
 command.problemview.showinhidden=Anzeigen in versteckt
 
 wizard.category.modulestudio=ModuleStudio
