removed cheat sheets bundle and dynamic help menu entry

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -11,6 +11,7 @@ views.errorlog.name=Nachrichten
 views.outline.name=Outline
 views.properties.name=Eigenschaften
 views.problems.name=Probleme
+views.cheatsheets.name=Spickzettel
 
 command.file.newapplication.name=Neue Anwendung
 command.file.newapplication.mnemonic=N
@@ -66,9 +67,6 @@ command.window.openproblemview.description=Die Problem View anzeigen
 command.window.switchtheme.name=Theme wechseln
 command.window.switchtheme.mnemonic=T
 command.window.switchtheme.description=Zwischen hellem und dunklen Design umschalten
-command.help.cheatsheets.name=Spickzettel
-command.help.cheatsheets.mnemonic=S
-command.help.cheatsheets.description=Interaktive Tutorials
 command.problemview.showinhidden=Anzeigen in versteckt
 
 wizard.category.modulestudio=ModuleStudio
