added new validation check

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -269,9 +269,11 @@ MostDslValidator.RelationshipJoinNeedsValidTargetFieldType=Das Feld {0} muss ein
 MostDslValidator.RelationshipJoinOneToManyNeedsValidOrderByTargetField=Das Attribut orderBy zeigt auf ein ungültiges Feld der Ziel-Entität.
 MostDslValidator.RelationshipJoinOneToManyTargetMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Zielseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.RelationshipJoinSourceAliasesMustBeUnique=Die Quell-Aliase der Beziehung müssen eindeutig sein für alle eingehenden Beziehungen einer Entität.
+MostDslValidator.RelationshipJoinSourceAliasesMustNotBeNamedLikeField=Die Querll-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Ziel-Entität.
 MostDslValidator.RelationshipJoinSourceAliasNameMustBeLonger=Das Quell-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipJoinSourceAliasNameShouldBeLonger=Das Quell-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.RelationshipJoinTargetAliasesMustBeUnique=Die Ziel-Aliase der Beziehung müssen eindeutig sein für alle ausgehenden Beziehungen einer Entität.
+MostDslValidator.RelationshipJoinTargetAliasesMustNotBeNamedLikeField=Die Zial-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Quell-Entität.
 MostDslValidator.RelationshipJoinTargetAliasNameMustBeLonger=Das Ziel-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipJoinTargetAliasNameShouldBeLonger=Das Ziel-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.RelationshipNeedsApplication=Die Beziehung muss einer Anwendung zugewiesen werden.
