added custom help view

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -11,7 +11,7 @@ views.errorlog.name=Nachrichten
 views.outline.name=Outline
 views.properties.name=Eigenschaften
 views.problems.name=Probleme
-views.cheatsheets.name=Spickzettel
+views.help.name=Hilfe
 
 command.file.newapplication.name=Neue Anwendung
 command.file.newapplication.mnemonic=N
@@ -67,11 +67,27 @@ command.window.openproblemview.description=Die Problem View anzeigen
 command.window.switchtheme.name=Theme wechseln
 command.window.switchtheme.mnemonic=T
 command.window.switchtheme.description=Zwischen hellem und dunklen Design umschalten
+command.help.help.name=Handbuch
+command.help.help.mnemonic=H
+command.help.help.description=Das ModuleStudio-Handbuch öffnen
+command.help.search.name=Suche
+command.help.search.mnemonic=S
+command.help.search.description=Die Hilfe durchsuchen
 command.problemview.showinhidden=Anzeigen in versteckt
 
 wizard.category.modulestudio=ModuleStudio
 wizard.newproject.name=ModuleStudio-Projekt
 wizard.newproject.description=Erstellt eine neue ModuleStudio-Anwendung.
+
+help.searchEngine=Suchmaschine
+help.searchengine.localhelp.label=Lokale Hilfe
+help.searchengine.localhelp.desc=Durchsucht lokale Hilfedokumente
+help.searchengine.infocenter.label=Informationszentrum
+help.searchengine.infocenter.desc=Durchsucht ein Remote-Informationszentrum
+help.searchengine.websearch.label=Web-Suche
+help.searchengine.websearch.desc=Führt eine allgemeine Web-Suche durch
+help.embedded_browser=Eingebetteter Browser
+help.system_browser=Standard System Browser
 
 unwelcome.activity.name=unwillkommen
 unwelcome.activity.description=unwillkommene Contributions
