--- a/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.preferences.nl1.de/de/guite/modulestudio/ui/preferences/messages_de.properties
@@ -1,4 +1,20 @@
 #Properties file for de.guite.modulestudio.ui.preferences
+HelpPreferencePage_ContextHelpGroup=Kontexthilfe
+HelpPreferencePage_Dlabel=Öffne D&ialogkontexthilfe
+HelpPreferencePage_ExternalBrowser=In einem externen Webbrowser
+HelpPreferencePage_HelpBrowser=Im Hilfe-Browser
+HelpPreferencePage_Infopop=In einem Popup-Fenster
+HelpPreferencePage_Olabel=Öffne &Dokumente in der Hilfeansicht
+HelpPreferencePage_OpenContents=Öffne Hilfe&inhalte
+HelpPreferencePage_OpenInBrowser=In einem Browserfenster
+HelpPreferencePage_OpenInEditor=Im Editorbereich
+HelpPreferencePage_OpenInPlace=Im selben Fenster
+HelpPreferencePage_OpenModeGroup=Einstellungen zum Öffnen
+HelpPreferencePage_SearchLocation=Öffnen der &Suche für die Hilfe
+HelpPreferencePage_SelectBrowser=Gebe an, wie die Hilfe angezeigt werden soll.
+HelpPreferencePage_Tray=In einer Dialogfenstererweiterung
+HelpPreferencePage_View=In einem dynamischen Hilfefenster
+HelpPreferencePage_Wlabel=Öffne Kontexthilfe für &Fenster
 PreferencePage_Description=Gebe hier Deine Standardvorgaben ein.
 PreferencePage_Theme=Standard-Theme
 PreferencePage_Vendor=Anbieter
