--- a/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -20,17 +20,17 @@ _UI_ReferredApplication_type = Referenzierte Anwendung
 _UI_DataObject_type = Datenobjekt
 _UI_MappedSuperClass_type = Gemappte Oberklasse
 _UI_Entity_type = Entität
-_UI_EntityField_type = Entitäts-Field
-_UI_DerivedField_type = Abgeleitetes Field
-_UI_CalculatedField_type = Kalkuliertes Field
+_UI_EntityField_type = Entitäts-Feld
+_UI_DerivedField_type = Abgeleitetes Feld
+_UI_CalculatedField_type = Kalkuliertes Feld
 _UI_BooleanField_type = Boolean-Feld
 _UI_LengthField_type = Feld mit Länge
 _UI_AbstractIntegerField_type = Abstraktes Integer-Feld
 _UI_IntegerField_type = Integer-Feld
 _UI_DecimalField_type = Dezimal-Feld
-_UI_AbstractStringField_type = Abstract String Field
+_UI_AbstractStringField_type = Abstraktes String-Feld
 _UI_StringField_type = String-Feld
-_UI_TextField_type = Text Field
+_UI_TextField_type = Text-Feld
 _UI_UserField_type = Benutzer-Feld
 _UI_EmailField_type = E-Mail-Feld
 _UI_UrlField_type = URL-Feld
@@ -39,7 +39,7 @@ _UI_ListField_type = Listen-Feld
 _UI_ListFieldItem_type = Listen-Eintrag
 _UI_ArrayField_type = Array-Feld
 _UI_ObjectField_type = Objekt-Feld
-_UI_AbstractDateField_type = Abstract Date Field
+_UI_AbstractDateField_type = Abstraktes Datums-Feld
 _UI_DatetimeField_type = Zeitstempel-Feld
 _UI_DateField_type = Datums-Feld
 _UI_TimeField_type = Zeit-Feld
@@ -72,9 +72,9 @@ _UI_ViewAction_type = View Aktion
 _UI_DisplayAction_type = Display Aktion
 _UI_EditAction_type = Edit Aktion
 _UI_DeleteAction_type = Delete Aktion
-_UI_CustomAction_type = Custom Aktion
+_UI_CustomAction_type = Eigene Aktion
 _UI_Field_type = Feld
-_UI_Unknown_type = Object
+_UI_Unknown_type = Objekt
 
 _UI_Unknown_datatype= Value
 
