--- a/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/sirius/messages_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/sirius/messages_de.properties
@@ -1,8 +1,12 @@
 SiriusListItemEditingAction_actionFailedMessage=Fehler in externer Java-Aktion
 SiriusListItemEditingAction_dialogTitle=Listeneinträge bearbeiten
-SiriusListItemEditingDialog_createItemLabel=<b>Neuen Eintrag erstellen</b>
-SiriusListItemEditingDialog_containerItemsLabel=<b>Enthaltene Einträge</b>
+SiriusListItemEditingDialog_addLabel=Hinzufügen
 SiriusListItemEditingDialog_columnDefault=Standard
+SiriusListItemEditingDialog_columnImage=Bild
 SiriusListItemEditingDialog_columnName=Name
 SiriusListItemEditingDialog_columnValue=Wert
-SiriusListItemEditingDialog_columnImage=Bild
+SiriusListItemEditingDialog_containerItemsLabel=<b>Enthaltene Einträge</b>
+SiriusListItemEditingDialog_createItemLabel=<b>Neuen Eintrag erstellen</b>
+SiriusListItemEditingDialog_downLabel=Runter
+SiriusListItemEditingDialog_removeLabel=Entfernen
+SiriusListItemEditingDialog_upLabel=Hoch
