--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -35,7 +35,7 @@ command.file.generate.name=Anwendung generieren
 command.file.generate.mnemonic=G
 command.file.generate.description=Den Generator-Workflow starten
 command.window.submenu.editors.name=Editoren
-command.window.submenu.editors.mnemonic=E
+command.window.submenu.editors.mnemonic=D
 command.window.submenu.editors.description=Unterschiedliche Modell-Editoren
 command.window.submenu.views.name=Views
 command.window.submenu.views.mnemonic=V
@@ -47,13 +47,13 @@ command.window.openvariablestableeditor.name=Variablen Tabelle öffnen
 command.window.openvariablestableeditor.mnemonic=V
 command.window.openvariablestableeditor.description=Den Tabellen-Editor für Variablen anzeigen
 command.window.openentitiestableeditor.name=Entitäten Tabelle öffnen
-command.window.openentitiestableeditor.mnemonic=T
+command.window.openentitiestableeditor.mnemonic=E
 command.window.openentitiestableeditor.description=Den Tabellen-Editor für Entitäten-Felder anzeigen
 command.window.opendashboardview.name=Dashboard öffnen
 command.window.opendashboardview.mnemonic=D
 command.window.opendashboardview.description=Die Dashboard View anzeigen
 command.window.openerrorlogview.name=Protokoll öffnen
-command.window.openerrorlogview.mnemonic=F
+command.window.openerrorlogview.mnemonic=R
 command.window.openerrorlogview.description=Die Nachrichten View anzeigen
 command.window.openoutlineview.name=Umriss öffnen
 command.window.openoutlineview.mnemonic=U
