minor changes for auto update

--- a/production/de.guite.modulestudio.update.nl1.de/src/de/guite/modulestudio/update/messages_de.properties
+++ b/production/de.guite.modulestudio.update.nl1.de/src/de/guite/modulestudio/update/messages_de.properties
@@ -1,6 +1,9 @@
 #Properties file for de.guite.modulestudio.update
-UpdateService_NoAgentFound=Kein Provisioning Agent vorhanden. Die Anwendung ist nicht für Updates eingerichtet.
 UpdateService_CheckingForUpdates=Prüfe auf Aktualisierungen der Anwendung...
-UpdateService_OnlyFromExport=Aktualisieren aus Eclipse funktioniert nicht.
-UpdateService_UpdateStatus=Update Status:
+UpdateService_FinishingUpdate=Update wurde installiert, starte neu.
 UpdateService_InvalidRepository=Ungültiger Repository URL:
+UpdateService_NoAgentFound=Kein Provisioning Agent vorhanden. Die Anwendung ist nicht für Updates eingerichtet.
+UpdateService_NoUpdatesFound=Keine Updates gefunden.
+UpdateService_OnlyFromExport=Aktualisieren aus Eclipse funktioniert nicht.
+UpdateService_StartingUpdate=Automatisches Update wird gestartet.
+UpdateService_UpdateStatus=Update Status:
