enabled function to delete projects

--- a/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -34,6 +34,9 @@ command.file.validate.description=Das aktuell geöffnete Diagramm auf Fehler unte
 command.file.generate.name=Anwendung generieren
 command.file.generate.mnemonic=G
 command.file.generate.description=Den Generator-Workflow starten
+command.file.deleteproject.name=Projekt löschen
+command.file.deleteproject.mnemonic=L
+command.file.deleteproject.description=Das aktuelle Projekt löschen
 command.window.submenu.editors.name=Editoren
 command.window.submenu.editors.mnemonic=D
 command.window.submenu.editors.description=Unterschiedliche Modell-Editoren
