migrated dsl bundles to new generator infrastructure

--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -21,7 +21,7 @@ command.validate.description = Ausführliche Validierung starten
 command.validate.name = Validieren
 command.validate.tooltip = Ausführliche Validierung starten
 page.name.refactoring = Refaktorisierung
-wizard.project.name=MostDsl-Projekt
+page.name.compiler = Compiler
 viewer.label = Most DSL Vergleich
 marker.check.fast = Most DSL Problem
 marker.check.normal = Most DSL Problem
