added auto save functionality

--- a/bundles/de.guite.modulestudio.ui.preferences.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.ui.preferences.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -3,5 +3,9 @@ pluginName=ModuleStudio UI Preferences
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio UI Preferences Locales Deutsch
 
+PreferencePages.ModuleStudio=ModuleStudio
+PreferencePages.AutoSave=Automatisch speichern
+PreferencePages.Help=Hilfe
+
 modulestudio_preferences_page.name=ModuleStudio
 help_preferences_page_name=Hilfe
